[project]
name = "grokking-algorithms-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mypy>=1.11.2",
    "numpy>=2.1.1",
    "pre-commit>=3.8.0",
    "pytest-benchmark>=4.0.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
    "scikit-learn>=1.5.2",
]
